<resources>
    <string name="app_name">点即搜</string>
    <string name="service_error">服务端错误</string>
    <string name="not_found">没有找到资源</string>
    <string name="timeout">超时</string>
    <string name="network_wrong">网络错误</string>
    <string name="unexpected_error">未知错误</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- MainActivity -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">主页</string>
    <string name="title_document">文档</string>
    <string name="title_tool">工具</string>
    <string name="title_activity_login">登录</string>
    <string name="share_text">我发现了一个特别好用的文档搜索app，下载连接http://reoger.tk ，你也赶快来试试吧！</string>

    <string name="author">作者</string>
    <string name="introduction">作品简介</string>
    <string name="background">背景</string>
    <string name="background_details">这里写巴拉拉 一大堆</string>
    <string name="open_github">开源地址</string>
    <string name="github_url">https://github.com/Reoger/doc</string>
    <string name="about_author">关于作者</string>
    <string name="author_detail">爱学习，爱生活！</string>
    <string name="blog_address">reoger.tk</string>
    <string name="blog_address_app">app下载地址</string>
    <string name="blog">博客</string>

    <string name="blog_app">博客app</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="regitser_counter">regitser Counter</string>

    <string name="user_login">用户登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="login_unknow_error">登录发生未知错误</string>

    <string name="read_activity">在线阅读界面</string>
    <string name="comment_delete_success">评论删除成功</string>
    <string name="comment_delete_fail">评论删除失败</string>
    <string name="comment_no_body">该文档还没有人评论哦</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_fail">评论失败</string>
    <string name="can_not_find_file">无法查找到指定的文件</string>

    <!-- Example General settings -->
    <string name="pref_header_help_center">帮助中心</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_account_display_name">user name</string>
    <string name="pref_default_display_name">默认用户名</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_theme">主题设置</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">通知</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_account">账号管理</string>
    <string name="pref_header_check_update">检查更新</string>
    <string name="pref_header_about">关于文档</string>
    <string name="version">1.0.1</string>
    <string name="download">下载</string>
    <string name="username">用户名</string>
    <string name="email">邮箱</string>
    <string name="logout">退出登录</string>
    <string name="file_upload">"文件上传"</string>
    <string name="fragment_marks">我的收藏</string>
    <string name="fragment_commit">我的评论</string>
    <string name="fragment_docment">我的文档</string>
    <string name="fragment_share">我的分享</string>
    <string name="no_more_info">暂时没有收藏任何文章，快去收集吧~</string>
    <string name="menu_person">个人</string>
    <string name="menu_history">历史</string>
    <string name="menu_about">关于</string>
    <string name="menu_Settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="menu_feedfack">反馈</string>
    <string name="menu_communicate">交流</string>
    <string name="user_center">个人中心</string>
    <string name="record_history">浏览记录</string>
    <string name="hot_tab">热门标签</string>
    <string name="search">查找</string>
    <string name="user_not_login">用户未登录，请登录后重试</string>
    <string name="text2image">文字转图片</string>
    <string name="QRCode">二维码扫描</string>
    <string name="Text2QRcode">文字转二维码</string>

</resources>
