<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory android:title="@string/app_name">
        <Preference android:title="@string/version" />
        <Preference android:title="@string/app_name" />
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="@string/introduction">
        <android.support.v7.preference.Preference
            android:summary="@string/background_details"
            android:title="@string/background" />

        <android.support.v7.preference.Preference
            android:title="@string/open_github"
            android:key="github_open"
            android:summary="@string/github_url"/>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="@string/author">

        <android.support.v7.preference.Preference
            android:summary="@string/about_author"
            android:title="@string/author_detail" />

        <android.support.v7.preference.Preference
            android:title="@string/blog"
            android:key="blog"
            android:summary="@string/blog_address"/>

        <android.support.v7.preference.Preference
            android:title="@string/blog_app"
            android:key="blog_app"
            android:summary="@string/blog_address_app"/>

    </android.support.v7.preference.PreferenceCategory>


</android.support.v7.preference.PreferenceScreen>